Add requirements.txt add necessary dependencies below: tensorflow-hub tensorflow-text tf-models-official transformers

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
+setuptools
+wheel
+tensorflow
 numpy
 pandas
-tensorflow
+Pillow
+matplotlib
+scipy
+scikit-learn
+tensorflow-hub
+tensorflow-text
+tf-models-official
 transformers
