--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
+pip
 setuptools
 wheel
 tensorflow
 numpy
 pandas
-spacy
+spacy[cuda110,transformers]
 Pillow
 scipy
 scikit-learn
 tensorflow-hub
 tensorflow-text
 tf-models-official
+tokenizers
 transformers
 openpyxl
